# Algoritmeanalyse-og-optimering

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  asymptoter.ggb  script.sh
.cache/clangd/index/: main.cpp.0DEE28209BA29277.idx  searching.h.4CD665BC2D294543.idx  sorting.h.00CE3C23D3E21A16.idx  test_searching.h.6540B7BC783BB255.idx  test_sorting.h.9D380D7E1A3AA4E5.idx
Algoritmeanalyse-og-optimering/: Algoritmeanalyse-og-optimering.7z  Algoritmeanalyse-og-optimering.cpp  Algoritmeanalyse-og-optimering.sln  Algoritmeanalyse-og-optimering.vcxproj  Algoritmeanalyse-og-optimering.vcxproj.filters  Instrumentor.h  Merge Sort_results.txt  Visualizer.cpp  Visualizer.h  main.h  results.json  results2.json  results_searching.json  results_sorting.json  searching.cpp  searching.h  sorting.cpp  sorting.h
Algoritmeanalyse-og-optimering/results/: results1.json
Algoritmeanalyse-og-optimering/results merge_insertion sort and quick_sort/: results_sorting.json
docs/: README.md  report.md
dotgraphs/: binary-search.dot  class-diagrams.dot  kontrol-flow-cpp.dot  kontrol-flow-python.dot  merge-sort.dot  program-flow.dot  quick-sort.dot  visualizer.dot
examples/struct/: example.c
include/: searching.h  sorting.h
maple/: asymptote udledning.mw  asymptotes big oh.mw  asyptoter.mw
src/: App.cpp  App.h  benchmark.cpp  main.cpp  main.h  searching.cpp  searching.h  sorting.cpp  sorting.h  test_searching.h  test_sorting.h
src/app/: App.cpp  App.h  CommandLine.cpp  CommandLine.h
src_visualize/: README.md  asymptoter.py  bigo.py  comparer.py  converter.py  graph.py  main.py  plotter.py  results.csv  results_showcase.py  sorting_benchmark.py  sorting_results.csv  worst_quick_plotter.py
tests/: test_searching.cpp
(+36 files in other folders)
